Bug 26132 - ar creates invalid libraries for some targets with plugins enabled
Summary: ar creates invalid libraries for some targets with plugins enabled
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.35
: P2 normal
Target Milestone: 2.35
Assignee: Alan Modra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-18 07:40 UTC by Alan Modra
Modified: 2020-06-21 12:51 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Modra 2020-06-18 07:40:51 UTC
Targets such as rs6000-aix and alpha-vms that have unusual archive formats can't enable plugin support, because doing so makes ar create the wrong type of archive.
Comment 1 Sourceware Commits 2020-06-21 12:50:28 UTC
The master branch has been updated by Alan Modra <amodra@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=1e92785005ce880a5fac9d022f05cdcff91c3091

commit 1e92785005ce880a5fac9d022f05cdcff91c3091
Author: Alan Modra <amodra@gmail.com>
Date:   Sun Jun 21 20:54:24 2020 +0930

    PR26132, ar creates invalid libraries for some targets with plugins enabled
    
            PR 26132
            * configure.ac: Disable plugins by default for some targets.
            * plugin.c: Comment typo fix.
            * configure: Regenerate.
Comment 2 Alan Modra 2020-06-21 12:51:56 UTC
git commit 0381901e629115 is a prerequisite for comment #1.