PR26132, ar creates invalid libraries for some targets with plugins enabled

PR 26132
	* configure.ac: Disable plugins by default for some targets.
	* plugin.c: Comment typo fix.
	* configure: Regenerate.